# netflix-leaving

./: .gitignore  .sample.env  Makefile  README.md  ntflx-leaving.py  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
2022/: 0221.html  0223.html  0224.html  0225.html  0226.html  0227.html  0228.html  0302.html  0303.html  0305.html  0308.html  0312.html  0313.html  0316.html  0318.html  0322.html  0323.html  0327.html  0328.html  0404.html  0407.html  0408.html  0410.html  0413.html  0414.html  0417.html  0419.html  0421.html  0425.html  0426.html  0428.html  0429.html  0430.html  0504.html  0505.html  0506.html  0507.html  0515.html  0526.html  0527.html  (+238 more)
2023/: 0115.html  0116.html  0118.html  0120.html  0122.html  0123.html  0124.html  0127.html  0129.html  0131.html  0202.html  0204.html  0207.html  0209.html  0210.html  0211.html  0215.html  0217.html  0218.html  0220.html  0221.html  0226.html  0227.html  0301.html  0304.html  0305.html  0306.html  0307.html  0308.html  0311.html  0312.html  0313.html  0314.html  0315.html  0317.html  0321.html  0325.html  0327.html  0329.html  0330.html  (+297 more)
2024/: 0101.html  0103.html  0104.html  0105.html  0106.html  0108.html  0110.html  0111.html  0120.html  0123.html  0125.html  0127.html  0129.html  0201.html  0202.html  0205.html  0206.html  0207.html  0208.html  0210.html  0214.html  0219.html  0221.html  0224.html  0225.html  0226.html  0301.html  0302.html  0304.html  0305.html  0306.html  0308.html  0309.html  0311.html  0313.html  0315.html  0318.html  0319.html  0320.html  0323.html  (+318 more)
(+1215 files in other folders)
